--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,7 @@
     <title>Airebnb</title>
   </head>
   <body>
-    <script async
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKUUNENQGV6VMHYI0lTbeCSAdc3fZ9CJk&libraries=places&callback=initMap">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKUUNENQGV6VMHYI0lTbeCSAdc3fZ9CJk&libraries=places&callback=initMap">
     </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
