finished remaining listing pages, 17 total

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Airbnb Clone Build by Carlos Macario"/>
+    <meta name="description" content="Airbnb Clone Built by Carlos Macario"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
     <script src="https://kit.fontawesome.com/85bc841a28.js" crossorigin="anonymous"></script>
     <title>Airebnb</title>
