--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,7 @@
     <title>Airebnb</title>
   </head>
   <body>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKUUNENQGV6VMHYI0lTbeCSAdc3fZ9CJk&libraries=places&callback=initMap">
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFJz6zYSkAB1APFxHzmiGBoCkn0Ylron0&libraries=places"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
